# alttext-auto

./: .env.example  .gitignore  README.md  fix_captioner.patch  shopify_alt_text_micro_saa_s_mvp_blueprint.md  vercel.json
.github/workflows/: ci.yml  deploy-vercel.yml
app/dashboard/: page.tsx
apps/web/: jest.config.js  jest.setup.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json
apps/web/__tests__/: button.test.tsx  card.test.tsx  cn.test.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
apps/web/app/api/billing/checkout/: route.ts
apps/web/app/api/billing/webhook/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/logs/: route.ts
apps/web/app/api/shop/: route.ts
apps/web/app/api/shopify/callback/: route.ts
apps/web/app/api/shopify/install/: route.ts
apps/web/app/api/shopify/webhooks/: route.ts
apps/web/app/api/webhooks/compliance/: route.ts
apps/web/app/billing/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/demo/: page.tsx
apps/web/app/install/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/app/robots.txt/: route.ts
apps/web/app/settings/: page.tsx
apps/web/app/terms/: page.tsx
apps/web/components/: fx-toggle.tsx  install-button.tsx  install-form.tsx  sticky-cta.tsx  theme-toggle.tsx  trial-ribbon.tsx
apps/web/components/dashboard/: LogsTable.tsx  WebhooksHealth.tsx
apps/web/components/ui/: button.tsx  card.tsx  container.tsx
apps/web/components/visuals/: background-fx.tsx  parallax.tsx  sparkles.tsx
apps/web/lib/: prisma.ts  shop-domain.ts  shopify.ts
apps/web/playwright-report/: index.html
apps/web/prisma/: schema.prisma
apps/web/prisma/migrations/20240924_init/: migration.sql
apps/web/scripts/: init_sqlite.py
apps/web/test-results/: .last-run.json
apps/web/test-results/home-landing-loads-and-shows-primary-CTAs/: error-context.md
apps/web/test/__mocks__/: canvas.js
apps/web/tests-e2e/: home.spec.ts
apps/worker/: fly.toml  main.py  pyproject.toml  requirements.txt
apps/worker/tests/: test_caption_endpoint.py  test_naive_alt.py
docs/: SHOPIFY_COMPLIANCE.md
scripts/: dev-all.sh
services/captioner-rs/captioner/: Cargo.toml  Dockerfile  README.md  build.rs  fly.toml
services/captioner-rs/captioner/benches/: cmp_latency.rs
services/captioner-rs/captioner/src/: engine.rs  lib.rs  main.rs
services/captioner-rs/captioner/src/ffi/: decoder.c
services/captioner-rs/captioner/tests/: decode_equivalence.rs
tools/blip_finetune/: README.md  train_blip.py
tools/blip_infer_server/: TUNNEL.md  requirements.txt  server.py
tools/notebooks/: colab_blip_server.ipynb  kaggle_blip_server.ipynb
(+1 files in other folders)
