[package]
name = "captioner"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
bytes = "1.10.1"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
turbojpeg = { version = "1.3.3", features = ["image"], optional = true }

[features]
turbo = ["dep:turbojpeg"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "cmp_latency"
harness = false
