[package]
name = "captioner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
bytes = "1.10.1"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
libc = "0.2.176"
ndarray = "0.15"
ort = { version = "1.16.3", features = ["load-dynamic", "copy-dylibs"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
turbojpeg = { version = "1.3.3", features = ["image"], optional = true }

[features]
accel-coreml = ["ort/coreml"]
accel-cuda = ["ort/cuda"]
turbo = ["dep:turbojpeg"]
turbo-ffi = ["dep:turbojpeg"]

[target.'cfg(target_os = "macos")'.dependencies.ort]
version = "1.16.3"
default-features = false
features = ["load-dynamic", "copy-dylibs", "coreml"]

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies.ort]
version = "1.16.3"
default-features = false
features = ["load-dynamic", "copy-dylibs", "cuda"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "cmp_latency"
harness = false

[[test]]
name = "decode_equivalence"


[build-dependencies]
cc = "1.2.40"
pkg-config = "0.3.32"
